added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -26,6 +27,9 @@
         <h2>CSS</h2>
         <ul>
           <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>touch style.css: Adds a css file in the current branch</li>
         </ul>
       </section>
 
@@ -33,9 +37,13 @@
         <h2>Git</h2>
         <ul>
           <li>Enter your Git notes here</li>
-          <li>git status: checks what branch we are currently on</li>
-          <li>git checkout -b [branch-name]: creates a new branch and switches to it</li>
-          <li>git checkout main: reverts back to the main branch of the repository</li>
+          <li>git status: Checks what branch we are currently on</li>
+          <li>git checkout -b [branch-name]: Creates a new branch and switches to it</li>
+          <li>git add -A: Stages all files in the working branch</li>
+          <li>git commit -m "[add whatever message you want]": Commits all staged files to update your local repo (-m adds a message to the commit, but isn't required)</li>
+          <li>git checkout main: Navigates back to the main branch of your local repo</li>
+          <li>git pull origin main: Loads content from the main branch of your GitHub repo into your local repo. The local main branch and GitHub main branch are in sync when you see the message, "Already up to date." This means that no changes were made to the GitHub main branch while you were working on the feature branch.</li>
+          <li>git push origin [branch-name]: Pushes feature branch to your GitHub repo. Make sure to stage and commit any changes beforehand</li>
         </ul>
       </section>
 
